delete first Vulnerabilities Security Hotspots Bugs